ansible-example/applications/security_groups.tf
##########################################################################
# RESOURCES
##########################################################################

resource "aws_security_group" "bastion_ssh_sg" {
  name         = "bastion_ssh"
  description  = "Allow SSH to bastion host from approved ranges"
  vpc_id       = "${data.terraform_remote_state.networking.vpc_id}"

  tags {
      Name = "terraform_bastion_ssh"
  }

  ingress {
      from_port    = 22
      to_port      = 22
      protocol     = "tcp"
      cidr_blocks  = ["${var.ip_range}"]
  }

  egress {
      from_port    = 0
      to_port      = 0
      protocol     = "-1"
      cidr_blocks  = ["0.0.0.0/0"]
  }
}

resource "aws_security_group" "nat" {
  name          = "vpc_nat"
  description   = "Allow traffic to pass from the private subnet to the internet"
  vpc_id        = "${data.terraform_remote_state.networking.vpc_id}"

  tags {
      Name = "terraform"
  }

  ingress {
      from_port    = 80
      to_port      = 80
      protocol     = "tcp"
      cidr_blocks  = ["${data.terraform_remote_state.networking.private_subnets_cidr_blocks}"]
  }
  
  ingress {
      from_port    = 443
      to_port      = 443
      protocol     = "tcp"
      cidr_blocks  = ["${data.terraform_remote_state.networking.private_subnets_cidr_blocks}"]
  }

  ingress {
      from_port    = -1
      to_port      = -1
      protocol     = "icmp"
      cidr_blocks  = ["${data.terraform_remote_state.networking.private_subnets_cidr_blocks}"]
  }

  egress {
      from_port    = 0
      to_port      = 0
      protocol     = "-1"
      cidr_blocks  = ["0.0.0.0/0"]
  }
}


resource "aws_security_group" "web_access_from_nat_sg" {
  name          = "private_subnet_web_access"
  description   = "Allow web access to the private subnet from the public subnet (via NAT instance)"
  vpc_id        = "${data.terraform_remote_state.networking.vpc_id}"

  tags {
      Name = "terraform"
  }

  ingress {
      from_port    = 80
      to_port      = 80
      protocol     = "tcp"
      cidr_blocks  = ["${data.terraform_remote_state.networking.public_subnets_cidr_blocks}"]
  }
  
  ingress {
      from_port    = 443
      to_port      = 443
      protocol     = "tcp"
      cidr_blocks  = ["${data.terraform_remote_state.networking.public_subnets_cidr_blocks}"]
  }

  ingress {
      from_port    = -1
      to_port      = -1
      protocol     = "icmp"
      cidr_blocks  = ["${data.terraform_remote_state.networking.public_subnets_cidr_blocks}"]
  }

  egress {
      from_port    = 0
      to_port      = 0
      protocol     = "-1"
      cidr_blocks  = ["0.0.0.0/0"]
  }
}


resource "aws_security_group" "webapp_http_inbound_sg" {
  name          = "demo_webapp_http_inbound"
  description   = "Allow HTTP from anywhere"
  vpc_id        = "${data.terraform_remote_state.networking.vpc_id}"

  tags {
      Name = "terraform_demo_webapp_http_inbound"
  }

  ingress {
      from_port    = 80
      to_port      = 80
      protocol     = "tcp"
      cidr_blocks  = ["0.0.0.0/0"]
  }

  egress {
      from_port    = 0
      to_port      = 0
      protocol     = "-1"
      cidr_blocks  = ["0.0.0.0/0"]
  }
}

resource "aws_security_group" "webapp_ssh_inbound_sg" {
  name         = "demo_webapp_ssh_inbound"
  description  = "Allow SSH from certain ranges"
  vpc_id       = "${data.terraform_remote_state.networking.vpc_id}"

  tags {
      Name = "terraform_demo_webapp_ssh_inbound"
  }

  ingress {
      from_port    = 22
      to_port      = 22
      protocol     = "tcp"
      cidr_blocks  = ["${var.ip_range}"]
  }
}

resource "aws_security_group" "webapp_outbound_sg" {
  name         = "demo_webapp_outbound"
  description  = "Allow outbound connections"
  vpc_id       = "${data.terraform_remote_state.networking.vpc_id}"

  tags {
      Name = "terraform_demo_webapp_outbound"
  }

  egress {
      from_port    = 0
      to_port      = 0
      protocol     = "-1"
      cidr_blocks  = ["0.0.0.0/0"]
  }
}

resource "aws_security_group" "rds_sg" {
  name          = "demo_rds_inbound"
  description   = "Allow inbound from web tier"
  vpc_id        = "${data.terraform_remote_state.networking.vpc_id}"

  tags {
      Name = "demo_rds_inbound"
  }

  // allows traffic from the SG itself
  ingress {
      from_port   = 0
      to_port     = 0
      protocol    = "-1"
      self        = true
  }

  // allows traffic for TCP 3306
  ingress {
      from_port       = 3306
      to_port         = 3306
      protocol        = "tcp"
      security_groups = ["${aws_security_group.webapp_http_inbound_sg.id}"]
  }

  // outbound internet access
  egress {
      from_port    = 0
      to_port      = 0
      protocol     = "-1"
      cidr_blocks  = ["0.0.0.0/0"]
  }
}
